--- a/app/src/main/res/layout/activity_all_country_list.xml
+++ b/app/src/main/res/layout/activity_all_country_list.xml
@@ -7,32 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".ui.CountriesListActivity">
 
-
-    <TextView
-        android:id="@+id/sortByName"
+    <Button
+        android:id="@+id/sortByNameButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/divider"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="10dp"
+        android:drawableTint="@color/white"
         android:text="@string/sort_by_name"
-        android:textSize="16sp"
-        android:padding="5dp"
-
+        android:layout_margin="10dp"
+        android:textSize="12sp"
         />
 
-    <ImageView
-        android:id="@+id/sortByNameArrow"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:src="@drawable/arrow_down"
-        app:layout_constraintStart_toEndOf="@id/sortByName"
-        app:layout_constraintTop_toTopOf="@id/sortByName"
-        app:layout_constraintBottom_toBottomOf="@id/sortByName"
-        android:layout_margin="5dp"
-        android:visibility="gone"
-        />
 
     <View
         android:id="@+id/divider"
@@ -43,38 +30,25 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <TextView
-        android:id="@+id/sortBySize"
+    <Button
+        android:id="@+id/sortBySizeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="10dp"
+        android:drawableTint="@color/white"
         android:text="@string/sort_by_size"
-        android:textSize="16sp"
-        android:padding="5dp"
-
+        android:layout_margin="10dp"
+        android:textSize="12sp"
         />
 
-    <ImageView
-        android:id="@+id/sortBySizeArrow"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:src="@drawable/arrow_down"
-        app:layout_constraintStart_toEndOf="@id/sortBySize"
-        app:layout_constraintTop_toTopOf="@id/sortBySize"
-        app:layout_constraintBottom_toBottomOf="@id/sortBySize"
-        android:layout_margin="5dp"
-        android:visibility="gone"
-
-        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/sortBySize"
+        app:layout_constraintTop_toBottomOf="@id/sortBySizeButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="10dp"
@@ -95,6 +69,7 @@
 
         <ImageView
             android:id="@+id/icon"
+            android:contentDescription="@string/image_description"
             android:layout_width="100dp"
             android:layout_height="100dp"
             app:layout_constraintStart_toStartOf="parent"
