--- a/app/src/main/res/layout/row_country_item.xml
+++ b/app/src/main/res/layout/row_country_item.xml
@@ -17,6 +17,7 @@
 
         <ImageView
             android:id="@+id/flag"
+            android:contentDescription="@string/image_description"
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:layout_constraintTop_toTopOf="@id/countryName"
